--- a/css/game.css
+++ b/css/game.css
@@ -6,7 +6,7 @@
   width: 100%;
   font-size: 1.8rem;
   border: 0.1rem solid rgb(86, 165, 235, 0.25);
-  background-color: white;
+  background-color: rgb(212, 240, 168);
 }
 
 .choice-container:hover {
